# media_catalogue_demo

./: .gitignore  manage.py  pyproject.toml
media_catalogue/: asgi.py  settings.py  urls.py  wsgi.py
movies/: admin.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py
templates/: base.html
templates/movies/: index.html
