[tool.poetry]
name = "media_catalogue"
version = "0.1.0"
description = ""
authors = ["Toni <toni.nurmi@csc.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}
django-debug-toolbar = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
